grpc added to websocket connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,11 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#grpc stuffs
+
+#grpc.server.port=9090
+#grpc.websocket-service.host=localhost
+#grpc.websocket-service.port=9091
+
+
 
