--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,13 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#grpc stuffs
+server.port=8080
 
-#grpc.server.port=9090
-#grpc.websocket-service.host=localhost
-#grpc.websocket-service.port=9091
+grpc.server.port=9090
+grpc.server.host=localhost
+
+grpc.client.port=9091
+grpc.client.host=localhost
 
 
 
